Add Rotation Matrix to the theoretical matrix.

--- a/theoretical.tex
+++ b/theoretical.tex
@@ -425,7 +425,6 @@ n & d(v) & n & d(v) & n & d(v)\\
 %																			   %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Geometry}
-
 \textbf{Conversao - angulos:}\\
 $\qquad$ De radiano para grau:\\
 $\qquad \qquad$ grau = radiano*(180/PI)\\
@@ -450,8 +449,18 @@ Let $\phi_1$, $\lambda_1$ and $\phi_2$, $\lambda_2$ be the geographical latitude
 - Given a collection of positive numbers $r_1$,...,$r_n$, there exists a polygon in $R^{2}$ with the side-lengths $r_1$,...,$r_n$ if and only if for every $i$, $r_i \, \textless $  1/2 * ($r_1$ + ... + $r_n$)\\[0.5cm]
 
 \textbf{Lei dos Cossenos} $\qquad a^{2} = b^{2} - c^{2} - 2\,b\,c\,cosA$\\
-\textbf{Lei dos Senos} $\, \quad \qquad \frac{a}{sin A} = \frac{b}{sin B} = \frac{c}{sin C}$
+\textbf{Lei dos Senos} $\, \quad \qquad \frac{a}{sin A} = \frac{b}{sin B} = \frac{c}{sin C}$\\[2.5cm]
 
+\textbf{Rotation Matrix}\\
+2-D Version:\\
+\begin{center}
+\includegraphics[scale=0.3]{rm.png}
+\end{center}
+
+3-D Version:\\
+\begin{center}
+\includegraphics[scale=0.7]{rm3d.png}
+\end{center}
 
 
 
